--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     },
     "dependencies": {
         "@fortawesome/fontawesome-free": "^6.5.1",
+        "@fullcalendar/core": "^6.1.10",
+        "@fullcalendar/daygrid": "^6.1.10",
+        "@fullcalendar/interaction": "^6.1.10",
+        "@fullcalendar/vue3": "^6.1.10",
         "@mdi/font": "^7.4.47",
         "pinia": "^2.1.7",
         "sweetalert2": "^11.10.4",
